# terraform-py

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  add-new-versions.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: add-new-versions.yml  tests.yml
templates/: README.md.j2  setup.py.j2
terraform_py/: __main__.py  _main.py
testing/invalid/: non-existent-resource.tf
testing/missing-hash/: .terraform.lock.hcl  versions.tf
testing/nested/invalid/: .terraform.lock.hcl
testing/nested/malformatted/: .terraform.lock.hcl  versions.tf
tests/: test_main.py
