[metadata]
name = terraform_py
description = Making terraform pip installable
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AleksaC/terraform-py
author = Aleksa Cukovic
author_email = aleksacukovic1@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    terraform-py = terraform_py._main:main
